--- a/scales/patterns/_island.scss
+++ b/scales/patterns/_island.scss
@@ -17,7 +17,7 @@
 }
 
 .island {
-    padding: 0 msem(0);
+    padding: 0 msem(3);
     @include rhythm(0,1,1,0);
 }
 
@@ -31,6 +31,6 @@
  * Just like .island, only smaller.
  */
 .islet {
-    padding: 0 msem(-4);
+    padding: 0 msem(-1);
     @include rhythm(0,.5,.5,0);
 }
